WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148628
[ES6] JSON.stringify should ignore object properties that have symbol values and convert the symbol values in array to null
https://bugs.webkit.org/show_bug.cgi?id=148628
Summary
[ES6] JSON.stringify should ignore object properties that have symbol values ...
Yusuke Suzuki
Reported
2015-08-30 22:17:53 PDT
[ES6] JSON.stringify should ignore object properties that have symbol values and convert the symbol values in array to null
Attachments
Patch
(6.58 KB, patch)
2015-08-30 22:31 PDT
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2015-08-30 22:31:28 PDT
Created
attachment 260274
[details]
Patch
Saam Barati
Comment 2
2015-08-30 22:50:57 PDT
Comment on
attachment 260274
[details]
Patch r=me
Yusuke Suzuki
Comment 3
2015-08-30 22:52:52 PDT
(In reply to
comment #2
)
> Comment on
attachment 260274
[details]
> Patch > > r=me
Wow! Thank you for your review :D
Yusuke Suzuki
Comment 4
2015-08-30 22:54:02 PDT
Committed
r189162
: <
http://trac.webkit.org/changeset/189162
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug